feat: implement auth middleware
this forced to switch from GET to POST requests to
the API due to OpenAPI and Swagger restriction on
using body params while GETting... absurd (ask ELK)

improved axios usage and logging
improved express logging
add item categories endpoint
remove scaffolding examples
